--- a/Website/index.html
+++ b/Website/index.html
@@ -2,7 +2,7 @@
 <html class="no-js" lang="en">
     <head>
    	 <meta charset="utf-8">
-   	 <title>Parallax Scrolling Tutorial</title>
+   	 <title>Hour Whebsight</title>
    	 <meta name="description" content="We're making a property app">
    	 <meta name="author" content="The team without a name">
    	 <!-- CSS Code -->
@@ -14,6 +14,67 @@
     </head>
 
     <body>
+
+	<div id="header"  data-type="_header">
+   	 <div>
+   		 <a href="index.html" class="logo"><img src="images/logo.jpg" alt=""></a>
+   		 <form action="index.html">
+   			 <input type="text" name="search" id="search" value="">
+   			 <input type="submit" name="searchBtn" id="searchBtn" value="">
+   		 </form>
+   	 </div>
+   	 <div id="nav_bar" class="navigation">
+   		 <ul>
+   			 <li class="selected">
+   				 <a href="index.html">home</a>
+   			 </li>
+   			 <li>
+   				 <a href="about.html">about</a>
+   				 <ul>
+   					 <li>
+   						 <a href="team.html">the team</a>
+   					 </li>
+   					 <li>
+   						 <a href="testimonials.html">testimonials</a>
+   					 </li>
+   					 <li>
+   						 <a href="gallery.html">gallery</a>
+   					 </li>
+   				 </ul>
+   			 </li>
+   			 <li>
+   				 <a href="services.html">services</a>
+   				 <ul>
+   					 <li>
+   						 <a href="services.html">engine maintenance</a>
+   					 </li>
+   					 <li>
+   						 <a href="services.html">wheel allignment</a>
+   					 </li>
+   					 <li>
+   						 <a href="services.html">air condition services</a>
+   					 </li>
+   					 <li>
+   						 <a href="services.html">transmission</a>
+   					 </li>
+   					 <li>
+   						 <a href="promo.html">promos &amp; discounts</a>
+   					 </li>
+   				 </ul>
+   			 </li>
+   			 <li>
+   				 <a href="blog.html">blog</a>
+   			 </li>
+   			 <li>
+   				 <a href="contact.html">contact</a>
+   			 </li>
+   			 <li class="booking">
+   				 <a href="booking.html">book an appointment</a>
+   			 </li>
+   		 </ul>
+   	 </div>
+    </div>
+
    	 <!-- Section #1 -->
    	 <section id="home" data-speed="15" data-type="background">
    	   <article>I am Absolute Positioned</article>
