--- a/Website/index.html
+++ b/Website/index.html
@@ -8,6 +8,7 @@
 <!-- CSS Code -->
 <link rel="stylesheet" href="css/index.css">
 <link rel="stylesheet" href="css/reset.css">
+<link rel="stylesheet" href="css/parallax.css">
 <!-- JS Code -->
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
 <script src="js/index.js"></script>
