--- a/Website/index.html
+++ b/Website/index.html
@@ -25,9 +25,41 @@
   <article>Easy to use interface</article>
 </section>
 <!-- Section #2 -->
-<section id="videos" data-speed="4" data-type="background">
-  <article>Video Links</article>
-</section>
+<!--<section id="videos" data-speed="4" data-type="background">-->
+  <div id="movie">
+
+    <div>
+        <a class="video1 cboxElement" href="http://www.youtube.com/embed/E9Q6ac5NVgU?rel=0&fs=0&autoplay=1">
+            <img class="style" src="images/movie_01.png"></img>
+        </a>
+        <!--<iframe class="sp" width="200" height="120" frameborder="0" style="width: 100%; margin: 0px 0px;" allowfullscreen="" src="//www.youtube.com/embed/E9Q6ac5NVgU?theme=light&showinfo=0">
+            #document
+        </iframe>-->
+        <p>
+
+            Video 1
+        </p>
+    </div>
+    <div>
+        <a class="video2 cboxElement" href="http://www.youtube.com/embed/HfMSGWi6Sn8?rel=0&fs=0&autoplay=1">
+            <img class="style" src="images/movie_02.png"></img>
+        </a>
+        <!--<iframe class="sp" width="200" height="120" frameborder="0" style="width: 100%; margin: 0px 0px;" allowfullscreen="" src="//www.youtube.com/embed/HfMSGWi6Sn8?theme=light&showinfo=0">
+            #document
+        </iframe>-->
+        <p>
+
+            Video 2
+
+        </p>
+    </div>
+    <br class="clr"></br>
+
+</div>
+
+
+   
+<!--</section>-->
 
 <div id="header"  data-type="_header">
   <div> <a href="index.html" class="logo"><img src="images/logo.jpg" alt=""></a>
@@ -62,5 +94,8 @@
     </ul>
   </div>
 </div>
+
+<div style="position: relative; z-index: 0; margin: 0 0 10px 10px;" class="video-wrap"><img src="/Portals/0/images/video-wuest.jpg" style="cursor: pointer" rel="#videoOverlay" alt="Play Video" /></div>
+
 </body>
 </html>
