--- a/Website/index.html
+++ b/Website/index.html
@@ -9,9 +9,12 @@
 <link rel="stylesheet" href="css/index.css">
 <link rel="stylesheet" href="css/reset.css">
 <link rel="stylesheet" href="css/parallax.css">
+<link rel="stylesheet" href="css/lightbox.css">
 <!-- JS Code -->
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
 <script src="js/index.js"></script>
+<script src="js/jquery-1.10.2.min.js"></script>
+<script src="js/lightbox-2.6.min.js"></script>
 </head>
 
 <body>
@@ -28,15 +31,17 @@
 <!--<section id="videos" data-speed="4" data-type="background">-->
   <div id="movie">
 
-    <div>
-        <a class="video1 cboxElement" href="http://www.youtube.com/embed/E9Q6ac5NVgU?rel=0&fs=0&autoplay=1">
-            <img class="style" src="images/movie_01.png"></img>
+    <div id="video1">
+    	<a href="http://www.youtube.com/embed/E9Q6ac5NVgU?rel=0&fs=0&autoplay=1">
+        	<img class="style" src="images/movie_01.png"></img>
         </a>
+        <!--<a class="video1 cboxElement" href="http://www.youtube.com/embed/E9Q6ac5NVgU?rel=0&fs=0&autoplay=1">
+            <img class="style" src="images/movie_01.png"></img>
+        </a>-->
         <!--<iframe class="sp" width="200" height="120" frameborder="0" style="width: 100%; margin: 0px 0px;" allowfullscreen="" src="//www.youtube.com/embed/E9Q6ac5NVgU?theme=light&showinfo=0">
             #document
         </iframe>-->
         <p>
-
             Video 1
         </p>
     </div>
@@ -71,31 +76,37 @@
   <div id="nav_bar_bg" class="navigation_bg"> </div>
   <div id="nav_bar" class="navigation">
     <ul>
-      <li class="selected"> <a href="index.html">home</a> </li>
-      <li> <a href="about.html">about</a>
+      <li class="selected"> <a href="index.html" -webki>home</a> </li>
+      <li> <a href="sell.html">sell</a>
         <ul>
-          <li> <a href="team.html">the team</a> </li>
-          <li> <a href="testimonials.html">testimonials</a> </li>
-          <li> <a href="gallery.html">gallery</a> </li>
+          <li> <a href="team.html">quick sell</a> </li>
+          <li> <a href="testimonials.html">full guide</a> </li>
+          <li> <a href="gallery.html">item 3</a> </li>
         </ul>
       </li>
-      <li> <a href="services.html">services</a>
+      <li> <a href="services.html">open homes</a>
         <ul>
-          <li> <a href="services.html">engine maintenance</a> </li>
-          <li> <a href="services.html">wheel allignment</a> </li>
-          <li> <a href="services.html">air condition services</a> </li>
-          <li> <a href="services.html">transmission</a> </li>
-          <li> <a href="promo.html">promos &amp; discounts</a> </li>
+          <li> <a href="services.html">full guide</a> </li>
+          <li> <a href="services.html">preparation</a> </li>
+          <li> <a href="services.html">schedule</a> </li>
+          <li> <a href="services.html">item 4</a> </li>
+          <li> <a href="promo.html">item 5</a> </li>
         </ul>
       </li>
-      <li> <a href="blog.html">blog</a> </li>
+      <li> <a href="blog.html">legal</a> 
+        <ul>
+          <li> <a href="services.html">contracts</a> </li>
+          <li> <a href="services.html">insurance</a> </li>
+          <li> <a href="services.html">find a lawyer</a> </li>
+          <li> <a href="services.html">item 4</a> </li>
+        </ul>
+      </li>
       <li> <a href="contact.html">contact</a> </li>
-      <li class="booking"> <a href="booking.html">book an appointment</a> </li>
+      <li class="booking"> <a href="booking.html">contact us</a> </li>
     </ul>
   </div>
 </div>
 
-<div style="position: relative; z-index: 0; margin: 0 0 10px 10px;" class="video-wrap"><img src="/Portals/0/images/video-wuest.jpg" style="cursor: pointer" rel="#videoOverlay" alt="Play Video" /></div>
 
 </body>
 </html>
